--- a/Responsive Design-Layouts And Frameworks/grid.html
+++ b/Responsive Design-Layouts And Frameworks/grid.html
@@ -12,8 +12,13 @@
 
         .container {
             display: grid;
-            /* grid-template-columns: 200px 200px 300px 600px 200px; */
-            grid-template-columns: repeat(3, 300px);
+            grid-template-columns: 200px 200px 300px 600px 200px;
+            /* creating new column depends of px       */
+            grid-template-columns: repeat(3, 300px) 400px;
+            grid-template-columns: repeat(6, 1fr) 2fr;
+            /* Here fr means it takes whole place of the part. */
+            justify-content: space-around;
+
         }
     </style>
 </head>
