--- a/Responsive Design-Layouts And Frameworks/responsive.html
+++ b/Responsive Design-Layouts And Frameworks/responsive.html
@@ -27,7 +27,7 @@
 
         @media screen and (max-width:576px) {
             .image-container {
-                flex-direction: column;
+                flex-direction: column-reverse;
             }
 
             .image-container div {
