--- a/more responsive layout/img-responsive.html
+++ b/more responsive layout/img-responsive.html
@@ -16,10 +16,11 @@
             width: 100%;
             height: 400px;
             gap: 5px;
+            margin-bottom: 5px;
         }
 
         .vartical-collage img {
-            height: 50%;
+            height: calc((100% - 5px)/2);
         }
 
         .row>div {
@@ -30,6 +31,23 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 2px;
+        }
+
+        /* Media Query */
+        @media screen and (max-width: 576px) {
+            .row {
+                flex-direction: column;
+                height: auto;
+            }
+
+        }
+
+        /* Medium Device */
+        @media screen and (min-width: 576px) and (max-width: 992px) {
+            .row {
+                flex-direction: column;
+                height: auto;
+            }
         }
     </style>
 </head>
