--- a/Pseudo class-CSS Nth child, last child/position.html
+++ b/Pseudo class-CSS Nth child, last child/position.html
@@ -1,191 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-
     <style>
-        /* .ring {
-            position: relative;
-            top: -510px;
-            left: 600px;
-        } */
-        .ring {
+      .ring {
+        position: relative;
+        top: -510px;
+        left: 600px;
+      }
+      /* .ring {
             position: sticky;
             top: 0px;
 
-        }
+        } */
 
+      .box {
+        border: 2px dotted green;
+        width: 200px;
+      }
 
-        .box {
-            border: 2px dotted green;
-            width: 200px;
-        }
+      .swim-container {
+        border: 2px dotted yellow;
+        width: 250px;
+      }
 
-        .swim-container {
-            border: 2px dotted yellow;
-            width: 250px;
+      .dummy {
+        border: 1px dotted blue;
+        width: 200px;
+        height: 200px;
+      }
 
-        }
-
-        .dummy {
-            border: 1px dotted blue;
-            width: 200px;
-            height: 200px;
-        }
-
-        .another {
-            border: 2px sold brown;
-            width: 400px;
-        }
+      .another {
+        border: 2px sold brown;
+        width: 400px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <h3>CSS Positions</h3>
     <ol>
-        <!-- Flow related -->
-        <li>Static</li>
-        <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                spot</small></li>
-        <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-        <!-- scroll related -->
-        <li>Fixed</li>
-        <li>Sticky</li>
+      <!-- Flow related -->
+      <li>Static</li>
+      <li>
+        Relative:
+        <small
+          >current position relative e koto tuku change hobe. and will not leave
+          the current spot</small
+        >
+      </li>
+      <li>
+        Absolute.
+        <small
+          >will lose it's own position and will move based on the root</small
+        >
+      </li>
+      <!-- scroll related -->
+      <li>Fixed</li>
+      <li>Sticky</li>
     </ol>
     <div class="swim-container">
-        <h3>CSS Positions</h3>
-        <ol>
-            <!-- Flow related -->
-            <li>Static</li>
-            <li>Relative: <small>current position relative e koto tuku change hobe. and will not leave the current
-                    spot</small></li>
-            <li>Absolute. <small>will lose it's own position and will move based on the root</small></li>
-            <!-- scroll related -->
-            <li>Fixed</li>
-            <li>Sticky</li>
-        </ol>
-        <div class="box boy"><img src="swim/boy.svg" alt="">
-            <h2>Heading</h2>
-            <h2>Heading</h2>
-            <h2>Heading</h2>
-            <h2>Heading</h2>
-            <h2>Heading</h2>
-        </div>
-        <div class="box ring"><img src="swim/ring.svg" alt=""></div>
-        <div class="box water"><img src="swim/water.svg" alt=""></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
+      <h3>CSS Positions</h3>
+      <ol>
+        <!-- Flow related -->
+        <li>Static</li>
+        <li>
+          Relative:
+          <small
+            >current position relative e koto tuku change hobe. and will not
+            leave the current spot</small
+          >
+        </li>
+        <li>
+          Absolute.
+          <small
+            >will lose it's own position and will move based on the root</small
+          >
+        </li>
+        <!-- scroll related -->
+        <li>Fixed</li>
+        <li>Sticky</li>
+      </ol>
+      <div class="box boy">
+        <img src="swim/boy.svg" alt="" />
+        <h2>Heading</h2>
+        <h2>Heading</h2>
+        <h2>Heading</h2>
+        <h2>Heading</h2>
+        <h2>Heading</h2>
+      </div>
+      <div class="box ring"><img src="swim/ring.svg" alt="" /></div>
+      <div class="box water"><img src="swim/water.svg" alt="" /></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
     </div>
 
     <div class="another">
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
-        <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
+      <div class="dummy"></div>
     </div>
-
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
