--- a/Exploreing-API/index.html
+++ b/Exploreing-API/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API JSON</title>
-  </head>
-  <body>
-    <h1>Exploring JSON</h1>
-    <h1>Exploring API</h1>
-    <button onclick="loadData()">Click to fetch</button>
-    <button onclick="loadPost()">Click to fetch</button>
-    <script src="script.js"></script>
-    <script src="./posts.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>API JSON</title>
+  <style>
+    #post-container {
+      max-width: 1143px;
+      margin: 50px auto;
+
+
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+      row-gap: 40px;
+    }
+
+    .card-container {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: justify;
+      border-radius: 10px;
+      box-shadow: 1px 1px 1px 1px gray;
+      height: 100%;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Exploring JSON</h1>
+  <h1>Exploring API</h1>
+  <button onclick="loadData()">Click to fetch</button>
+  <button onclick="loadPost()">Load Post</button>
+  <!-- <ol id="post-container"></ol> -->
+  <div id="post-container">
+
+
+
+  </div>
+  <script src="script.js"></script>
+  <script src="./posts.js"></script>
+</body>
+
 </html>
