--- a/browser-storage-api/index.html
+++ b/browser-storage-api/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <button onclick="addtoLocalStorage()">Add to LocalStorage</button>
-    <button onclick="getNumberfromLS()">Get ftom LocalStorage</button>
-    <button onclick="setObjectTOLS()">Set from LocalStorage</button>
-    <button onclick="getObjectTOLS()">get from LocalStorage</button>
-    <script src="js/storage.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <button onclick="addtoLocalStorage()">Add to LocalStorage</button>
+  <button onclick="getNumberfromLS()">Get ftom LocalStorage</button>
+  <button onclick="setObjectTOLS()">Set from LocalStorage</button>
+  <br>
+  <br>
+  <br>
+  <button onclick="getObjectTOLS()">Read object from LocalStorage</button>
+  <script src="js/storage.js"></script>
+</body>
+
 </html>
