--- a/browser-storage-api/cart.html
+++ b/browser-storage-api/cart.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <input id="product" type="text" placeholder="Product">
-    <input id="quantity" type="text" placeholder="Quantity">
+  <body>
+    <input id="product" type="text" placeholder="Product" />
+    <input id="quantity" type="text" placeholder="Quantity" />
     <button onclick="addCart()">Add to Cart</button>
 
     <div>
-        <h3>Product Cart</h3>
-        <ol id="product-container">
-
-        </ol>
+      <h3>Product Cart</h3>
+      <ol id="product-container"></ol>
     </div>
 
-
-
     <script src="js/cart.js"></script>
-
-
-</body>
-
+  </body>
 </html>
