react fetch async

--- a/js-revision-for-react/index.html
+++ b/js-revision-for-react/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="JavaScript-repeat.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+
+  <input id="name" type="text" placeholder="type name">
+  <input id="id" type="text" placeholder="type id">
+
+  <button onclick="handleAddToStorage()">Submit</button>
+  <button onclick="handleClear()">Clear</button>
+  <script src="JavaScript-repeat.js"></script>
+  <script src="localStorage.js"></script>
+</body>
+
 </html>
